--- a/President_Viewbook.Rmd
+++ b/President_Viewbook.Rmd
@@ -665,7 +665,7 @@ These data are from the published Viewbook distributed at the 2021 President's A
 
 **Community Engagement statistics**
 
---Ask Nancy Hauck
+--Email sent to Nancy Hauck
 
 * Total volunteer hours of service that students, faculty, staff, and alumni board members have contributed throughout the community -- 250,000
 * Total number of service projects DSU has participated in throughout the year (the service projects the above-mentioned volunteers contributed to) -- 150
@@ -710,7 +710,7 @@ These data are from the published Viewbook distributed at the 2021 President's A
 
 **Policies 2020-21**
 
---Email sent to Jaclyn Keroauc
+--Data provided by Jaclyn Keroauc
 
 * Number of new -- 6
 * Number of updated -- 21
@@ -719,7 +719,7 @@ These data are from the published Viewbook distributed at the 2021 President's A
 
 **Events statistics -- estimated attendance at the following events:**
 
---Email sent to UMAC
+--Email sent to UMAC/Stacy Schmidt and Megan Church
 
 * Homecoming/D-Week
 * Trailblazer Tree Lighting Celebration
@@ -731,7 +731,7 @@ These data are from the published Viewbook distributed at the 2021 President's A
 
 **University Marketing & Communication stats**
 
---Email sent to UMAC
+--Email sent to UMAC/Stacy Schmidt and Megan Church
 
 * Media Reach
 * Media Mentions
